<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/bg_permission_slide"
    tools:ignore="MissingConstraints,RtlSymmetry,RelativeOverlap,Autofill,LabelFor,ContentDescription">

    <TextView
        android:fontFamily="@font/nanumgothic"
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_slide_top"
        android:gravity="center"
        android:text="@string/permission_slide_title"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/nanumgothic"
        android:layout_marginTop="@dimen/margin_default"
        android:gravity="center"
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_slide_desc"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_title"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_twice"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/desc"/>

    <!-- 권한 요청 부분 레이아웃 시작 -->

    <FrameLayout
        android:id="@+id/storage_icon_frame"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_twice"
        android:background="@drawable/slide_round_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:tint="@color/bg_permission_slide"
            android:src="@drawable/ic_folder_white_24dp" />

    </FrameLayout>

    <TextView
        android:fontFamily="@font/nanumgothic"
        android:id="@+id/storage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_twice"
        android:text="@string/storage_permission"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/storage_icon_frame"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:fontFamily="@font/nanumgothic"
        android:id="@+id/storage_desc"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_half"
        android:text="@string/why_need_storage_permission"
        app:layout_constraintStart_toEndOf="@+id/storage_icon_frame"
        app:layout_constraintTop_toBottomOf="@+id/storage_title" />

    <Button
        android:fontFamily="@font/nanumgothic"
        android:id="@+id/btn_request_storage"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/margin_half"
        android:background="@drawable/slide_round_button"
        android:layout_marginEnd="@dimen/margin_default"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:text="@string/give_permission"
        android:textColor="@color/bg_permission_slide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage_desc" />

    <!-- 권한 요청 부분 레이아웃 끝 -->

</androidx.constraintlayout.widget.ConstraintLayout>